@@ -258,6 +258,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1488943: difflib.Differ() doesn't always add hints for tab characters
+
 - Issue #5037: Proxy the __unicode__ special method instead to __unicode__
   instead of __str__.
 
